# recipebook

./: README.md  config.h.in  meson.build
.github/workflows/: build.yml
data/: com.github.EbonJaeger.recipebook.desktop.in  meson.build
libcore/: Category.vala  Database.vala  Recipe.vala  Resources.vala  meson.build  recipebook-core-C.vapi
meson/: post_install.py
src/: Application.vala  main.vala  meson.build
src/Views/: AbstractView.vala  Categories.vala  CategoryView.vala  EditRecipe.vala  NewCategory.vala  Window.vala
src/Views/Widgets/: Breadcrumb.vala  BreadcrumbChain.vala  CategoryButton.vala  FormControl.vala  FormPictureChooser.vala  FormTextEntry.vala  FormTextarea.vala  RecipeButton.vala
